--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,5 @@
 @import url(./components/header.css);
 @import url(./components/intro.css);
 @import url(./components/services.css);
+@import url(./components/popular.css);
 /* components */
