--- a/css/main.css
+++ b/css/main.css
@@ -8,4 +8,5 @@
 @import url(./components/intro.css);
 @import url(./components/services.css);
 @import url(./components/popular.css);
+@import url(./components/news.css);
 /* components */
