--- a/css/main.css
+++ b/css/main.css
@@ -9,4 +9,5 @@
 @import url(./components/services.css);
 @import url(./components/popular.css);
 @import url(./components/news.css);
+@import url(./components/location.css);
 /* components */
