footer and site end

--- a/css/main.css
+++ b/css/main.css
@@ -10,4 +10,5 @@
 @import url(./components/popular.css);
 @import url(./components/news.css);
 @import url(./components/location.css);
+@import url(./components/footer.css);
 /* components */
