--- a/css/components/location.css
+++ b/css/components/location.css
@@ -27,6 +27,7 @@
     align-items: center;
     width: 180px;
     position: relative;
+    cursor: pointer;
     select {
         width: 100%;
         appearance: none;
@@ -35,6 +36,7 @@
         font-size: 22px;
         font-weight: 600;
         outline: none;
+        cursor: pointer;
         
     }
     svg {
